cabal-version:      3.0
name:               Autograter
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tianyu Chen
maintainer:         chentianyu@outlook.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Autograter
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        vector,
        bytestring,
        cassava,
        email-validate
    hs-source-dirs:   app
    default-language: Haskell2010
