cabal-version:      3.0
name:               Autograter
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tianyu Chen
maintainer:         chentianyu@outlook.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Autograter
    import:           warnings
    main-is:          Main.hs
    other-modules:    CmdArgs
    -- other-extensions:
    build-depends:
        base >=4.17.0.0,
        Cabal-syntax >= 3.8,
        vector,
        bytestring,
        cassava,
        containers >= 0.6,
        email-validate,
        optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
